@@ -162,8 +162,8 @@ SQLAlias.error.blankname=Alias name field cannot be empty
 SQLAlias.error.blankdriver=Alias driver field cannot be empty
 SQLAlias.error.blankurl=Alias URL field cannot be empty 
 
-JTreeAliasesListImpl.NewAliasFolderDlgTitle=New Alias folder
-JTreeAliasesListImpl.NewAliasFolderDlgText=New Alias folder name:
+AliasTreeUtil.NewAliasFolderDlgTitle=New Alias folder
+AliasTreeUtil.NewAliasFolderDlgText=New Alias folder name:
 
 EditAliasFolderDlg.OK=OK
 EditAliasFolderDlg.Cancel=Cancel
@@ -173,8 +173,8 @@ JListAliasesListImpl.confirmDelete=Are you sure you want to delete the alias {0}
 JTreeAliasesListImpl.confirmDelete=Are you sure you want to delete the alias {0}?
 JTreeAliasesListImpl.confirmDeleteFolder=Are you sure you want to delete the folder {0} and all aliases it contains?
 JTreeAliasesListImpl.confirmDeleteMultible=Are you sure you want to delete all selected Aliases/folders?
-JTreeAliasesListImpl.EditAliasFolderDlgTitle=Edit Alias folder
-JTreeAliasesListImpl.EditAliasFolderDlgText=Edit Alias folder name:
+AliasTreeUtil.EditAliasFolderDlgTitle=Edit Alias folder
+AliasTreeUtil.EditAliasFolderDlgText=Edit Alias folder name:
 
 ConnectToAliasCommand.error.driver={0}: JDBC Driver class not found
 ConnectToAliasCommand.error.cantopen=Unable to open SQL Connection
